--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,7 +28,8 @@ apply plugin: 'spring-boot'
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.3.2.RELEASE',
-    		'org.springframework.data:spring-data-mongodb:1.8.4.RELEASE'
+    		'org.springframework.data:spring-data-mongodb:1.8.4.RELEASE',
+    		'org.apache.commons:commons-lang3:3.4'
 }
 
 task wrapper(type: Wrapper) {
