Everything working except image deletion.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8080
 mongodb.host=localhost
 mongodb.port=27017
 mongodb.database=dream_diary
+images.path=/home/robert/dream_diary_data/images/
+multipart.maxFileSize=10Mb
