--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,13 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-sass": "~0.3.0",
+    "grunt-contrib-compass": "^1.1.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
     "lite-server": "^2.1.0",
     "typescript": "^1.7.5",
     "typings": "^0.6.8"
