--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-mongodb.host=localhost
+mongodb.host=192.168.178.38
 mongodb.port=27017
 mongodb.database=dream_diary
 images.path=/home/robert/dream_diary_data/images/
