--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,19 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'application'
-
-mainClassName = "dreamdiary.config.Main"
-
-//applicationDefaultJvmArgs = [
-//	"-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"
-//]
-
-repositories {
-    mavenCentral()
-}
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 buildscript {
     repositories {
@@ -21,14 +7,25 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE'
     }
 }
 apply plugin: 'spring-boot'
 
+repositories {
+    mavenCentral()
+}
+
+springBoot {
+    mainClass = "dreamdiary.config.Main"
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:1.3.2.RELEASE',
-    		'org.springframework.data:spring-data-mongodb:1.8.4.RELEASE',
+    compile 'org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE',
+    		'org.springframework.data:spring-data-mongodb:1.9.2.RELEASE',
     		'org.apache.commons:commons-lang3:3.4',
     		'commons-io:commons-io:2.4',
 			'org.springframework.security:spring-security-web:4.0.4.RELEASE',
