--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8080
-mongodb.host=192.168.178.38
-mongodb.port=27017
-mongodb.database=dream_diary
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=dream_diary
+spring.data.mongodb.username=dream_diary_admin
+spring.data.mongodb.password=test
+spring.data.mongodb.authentication-database=dream_diary
 images.path=/home/robert/dream_diary_data/images/
 multipart.maxFileSize=10Mb
