--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.data.mongodb.password=test
 spring.data.mongodb.authentication-database=dream_diary
 images.path=/home/robert/dream_diary_data/images/
 multipart.maxFileSize=10Mb
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
